--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 	<div id="buttons1" class="container">
 		<div class="row">
-			<a id="botao1" class="btn btn-primary col-md-2">Função 1</a>
-			<a id="botao2" class="btn btn-primary col-md-2">Função 2</a>
-			<a id="botao3" class="btn btn-primary col-md-2">Função 3</a>
-			<a id="botao4" class="btn btn-primary col-md-2">Função 4</a>
-			<a id="botao5" class="btn btn-primary col-md-2">Função 5</a>
-			<a id="botao6" class="btn btn-primary col-md-2">Função 6</a>
+			<div class="col-md-2"><button id="botao1" class="btn btn-primary btn-block mt-3 mt-md-2">Função 1</button></div>
+			<div class="col-md-2"><button id="botao2" class="btn btn-primary btn-block mt-3 mt-md-2">Função 2</button></div>
+			<div class="col-md-2"><button id="botao3" class="btn btn-primary btn-block mt-3 mt-md-2">Função 3</button></div>
+			<div class="col-md-2"><button id="botao4" class="btn btn-primary btn-block mt-3 mt-md-2">Função 4</button></div>
+			<div class="col-md-2"><button id="botao5" class="btn btn-primary btn-block mt-3 mt-md-2">Função 5</button></div>
+			<div class="col-md-2"><button id="botao6" class="btn btn-primary btn-block mt-3 mt-md-2">Função 6</button></div>
 		</div>
 	</div>
 
