--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 </head>
 <body>
 	<div id="greetings" class="container mt-5">
-		<h1 class="display-3">Hello world!</h1>
+		<h1 id="title" class="display-3">Hello <span>world!</span></h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem velit ea similique sunt, provident, atque hic dignissimos impedit, tempore minus debitis repudiandae. Eveniet repellendus voluptatibus consequuntur, quaerat assumenda sint iste.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem velit ea similique sunt, provident, atque hic dignissimos impedit, tempore minus debitis repudiandae. Eveniet repellendus voluptatibus consequuntur, quaerat assumenda sint iste.</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem velit ea similique sunt, provident, atque hic dignissimos impedit, tempore minus debitis repudiandae. Eveniet repellendus voluptatibus consequuntur, quaerat assumenda sint iste.</p>
+		<div class="form-group col-md-6 mx-auto mt-4">
+			<input class="form-control" placeholder="Nome" type="text">
+		</div>
 	</div>
 
-	<div id="buttons1" class="container">
+<!-- Botões 1 -->
+	<div id="buttons1" class="container mt-5">
 		<div class="row">
 			<div class="col-md-2"><button id="botao1" class="btn btn-primary btn-block mt-3 mt-md-2">Função 1</button></div>
 			<div class="col-md-2"><button id="botao2" class="btn btn-primary btn-block mt-3 mt-md-2">Função 2</button></div>
@@ -26,6 +30,7 @@
 			<div class="col-md-2"><button id="botao5" class="btn btn-primary btn-block mt-3 mt-md-2">Função 5</button></div>
 			<div class="col-md-2"><button id="botao6" class="btn btn-primary btn-block mt-3 mt-md-2">Função 6</button></div>
 		</div>
+		
 	</div>
 
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
